# wikidata-bulk-people

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  version-bump.yml
scripts/: bump_version.py  generate_qid_enums.py
src/wikidata_bulk_people/: __init__.py  _clients.py  _extract.py  _models.py  _sinks.py  _util.py  cli.py  enums.py
tests/: conftest.py
tests/integration/: test_live.py
tests/unit/: test_bump_version.py  test_claim_parsing.py  test_cli.py  test_enums.py  test_extract.py  test_filter_compilation.py  test_html.py  test_image_filtering.py  test_sinks.py  test_spouse_classification.py
