[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikidata-bulk-people"
dynamic = ["version"]
description = "Extract structured records from Wikipedia and Wikidata at scale"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{name = "Tristan Delforge", email = "tristandelforge1@gmail.com"}]
requires-python = ">=3.10"
keywords = ["wikidata", "wikipedia", "knowledge-graph", "data-extraction", "nlp", "bulk"]
dependencies = ["requests>=2.28"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

[project.optional-dependencies]
db = ["sqlalchemy>=2.0"]
dev = [
    "pytest>=8.0",
    "sqlalchemy>=2.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
    "types-requests",
]

[project.scripts]
wikidata-bulk-people = "wikidata_bulk_people.cli:main"

[project.urls]
Homepage = "https://github.com/tristan00/wikidata-bulk-people"
Source = "https://github.com/tristan00/wikidata-bulk-people"
Issues = "https://github.com/tristan00/wikidata-bulk-people/issues"
Changelog = "https://github.com/tristan00/wikidata-bulk-people/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/wikidata_bulk_people/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/wikidata_bulk_people"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "LICENSE", "README.md", "CHANGELOG.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -m 'not integration'"
markers = ["integration: live network tests (deselected by default)"]

[tool.coverage.run]
source = ["wikidata_bulk_people"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.mypy]
strict = true
python_version = "3.13"
